package com.tfg.app.resource.repository;

import com.tfg.app.resource.model.EmployeeSchedule;
import org.springframework.data.jpa.repository.JpaRepository;

public interface EmployeeScheduleRepository extends JpaRepository<EmployeeSchedule,Long> { }
